Swagger: description for LoginController
